# flutter_vst3

./: .gitignore  CLAUDE.md  CREATE_PLUGIN_GUIDE.md  FLUTTER_UI_SPEC.md  Makefile  README.md  setup.sh
.devcontainer/: Dockerfile  README.md  devcontainer.json
dart_tests/: pubspec.yaml
dart_tests/test/: graph_test.dart
dart_vst3_bridge/: README.md  pubspec.yaml
dart_vst3_bridge/lib/: dart_vst3_bridge.dart
dart_vst3_bridge/lib/src/: vst3_bridge.dart  vst3_callbacks.dart
dart_vst3_bridge/native/cmake/: VST3Bridge.cmake
dart_vst3_bridge/native/src/: flutter_ui_bridge.cpp
dart_vst3_bridge/native/templates/: flutter_controller.cpp.template
dart_vst3_bridge/scripts/: generate_plugin.dart
dart_vst_graph/: pubspec.yaml
dart_vst_graph/lib/src/: bindings.dart
dart_vst_graph/test/: graph_test.dart
dart_vst_host/: pubspec.yaml
dart_vst_host/lib/src/: host.dart
dart_vst_host/test/: host_test.dart
flutter_reverb/: pubspec.yaml
flutter_reverb/lib/: flutter_reverb.dart  main.dart
flutter_reverb/lib/src/: ffi_bridge.dart
flutter_ui/: .flutter-plugins-dependencies  pubspec.yaml
flutter_ui/lib/: main.dart
flutter_vst3/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
flutter_vst3/lib/: flutter_vst3.dart
flutter_vst3/lib/src/: flutter_vst3_bridge.dart  parameter_binding.dart
flutter_vst3/native/cmake/: VST3Bridge.cmake
flutter_vst3/native/src/: embedded_flutter_view.cpp  embedded_flutter_view.mm  plugin_view.cpp
flutter_vst3/native/templates/: plugin_controller.cpp.template
flutter_vst3/scripts/: generate_plugin.dart
native/: CMakeLists.txt
native/include/: dart_reverb_bridge.h
native/src/: dart_reverb_bridge.cpp  dart_vst_host.cpp  graph.cpp
plugin/: CMakeLists.txt  Info.plist.in
plugin/include/: plugin_ids.h
plugin/src/: dart_reverb_controller.cpp  dart_reverb_factory.cpp  dart_reverb_processor.cpp  factory.cpp  plugin_controller.cpp  plugin_processor.cpp  plugin_view.cpp
vsts/echo/: CMakeLists.txt  plugin_metadata.json
vsts/echo/lib/: echo_processor_exe.dart  echo_ui_main.dart
vsts/echo/lib/src/: echo_bridge.dart  echo_vst3_processor.dart
vsts/echo/lib/ui/: echo_ui.dart
vsts/echo/macos/Flutter/ephemeral/: Flutter-Generated.xcconfig  flutter_export_environment.sh
vsts/flutter_reverb/: CMakeLists.txt  pubspec.yaml
